--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "async": "~0.2.9",
     "mustache": "~0.7.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "~1.12.0",
+    "should": "~1.2.2"
+  },
   "scripts": {
     "test": "make test"
   },
