--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "commander": "~2.0.0",
     "front-matter": "~0.1.3",
     "async": "~0.2.9",
-    "mustache": "~0.7.3"
+    "mustache": "~0.7.3",
+    "yaml-js": "0.0.8"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
